--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -129,6 +129,7 @@ module.LinksAchievements.desc=Adds some external links to the achievements page
 module.LinksStaff.desc=Adds some external links to the staff page
 module.LinksTracker.desc=Adds some external tracker links to the corresponding NT pages and player pages
 module.LinksClubTransfers.desc=Adds some external links to the club transfer page
+module.LinksWorld.desc=Adds some external links to the world page
 module.LoyaltyDisplay.desc=Highlight the effect of loyalty and mother club bonus on your personal player page (Works only with 'Show skill bars' option enabled in HT preferences)
 module.ForumAlterHeaderLine.desc=Alters posting header line
 module.Singleline2.desc=Alternative ForumHeader single line module. Slightly faster than the other versions. Disables some conflicting forum post changing modules.
@@ -385,7 +386,7 @@ module.RatingsDisplay.DenominationsRange.desc=In the 0-20 denominations range
 module.RatingsDisplay.HatStats.desc=As HatStats
 module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to look less suspicious. Make sure you also disable all other modules that might be risky, especially the "Alert" modules.
-
+module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
 # -----------------------------------------------------------------------------
 
 
