--- a/manifest.json
+++ b/manifest.json
@@ -94,6 +94,7 @@
 			"content/information-aggregation/my-monitor.js",
 			"content/information-aggregation/nt-peek.js",
 			"content/information-aggregation/player-birthday.js",
+			"content/information-aggregation/player-stats-experience.js",
 			"content/information-aggregation/season-stats.js",
 			"content/information-aggregation/series-flags.js",
 			"content/information-aggregation/show-friendly-booked.js",
@@ -126,6 +127,7 @@
 			"content/links/links-tracker.js",
 			"content/links/links-training.js",
 			"content/links/links-youth.js",
+			"content/links/links-world.js",
 			"content/matches/att-vs-def.js",
 			"content/matches/copy-ratings.js",
 			"content/matches/htms-prediction.js",
