--- a/manifest.json
+++ b/manifest.json
@@ -106,6 +106,7 @@
 			"content/information-aggregation/transfer-deadline.js",
 			"content/information-aggregation/youth-promotes.js",
 			"content/information-aggregation/youth-series-estimation.js",
+			"content/information-aggregation/youth-twins.js",
 			"content/links/links-achievements.js",
 			"content/links/links-alliances.js",
 			"content/links/links-arena.js",
