Added Tournaments to TeamPopupLinks
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9285 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -295,6 +295,7 @@ module.TeamPopupLinks.LastLineup.desc=Last lineup
 module.TeamPopupLinks.NextMatch.desc=Next Match
 module.TeamPopupLinks.AddNextMatch.desc=Adds next match to HT Live
 module.TeamPopupLinks.YouthMatches.desc=Youth matches
+module.TeamPopupLinks.Tournaments.desc=Tournaments
 module.TeamPopupLinks.Coach.desc=Coach
 module.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 module.SkillColoring.desc=Better visualisation of skills
@@ -919,6 +920,7 @@ NextMatch=Next match
 AddNextMatch=Add next match to HT Live
 LastLineup=Last lineup
 YouthMatches=Youth matches
+Tournaments=Tournaments
 more=more...
 less=less...
 
