--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -395,7 +395,7 @@ module.PlayerStatsExperience.desc=Displays the experience subskill on the player
 # IN-GAME STRINGS. translate first
 
 #Youth-Twins
-YouthTwins.possibleTwins=This player has %1 possible twins.
+YouthTwins.possibleTwins=This player has %1 possible twin.;This player has %1 possible twins.
 YouthTwins.markedTwins=Marked as twin: %1
 YouthTwins.nonTwins=Marked as non-twin: %1
 YouthTwins.undecidedTwins=Not yet marked: %1
