localized teamstats options
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9320 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -176,6 +176,9 @@ module.TeamStats.General.desc=General information (TSI/age)
 module.TeamStats.Speciality.desc=Speciality
 module.TeamStats.Personality.desc=Personality
 module.TeamStats.Status.desc=Status (cards/injures)
+module.TeamStats.Attributes.desc=Attributes
+module.TeamStats.Skills.desc=Skills
+module.TeamStats.Match.desc=Match
 module.TeamStats.Current_league.desc=Current League
 module.ExtraPlayerInfo.desc=Show extra information of players on players page.
 module.ExtraPlayerInfo.CoachInfo.desc=Show information of former and current coaches.
