LoyaltyDisplay: Added reason to title, mayb that way people will understand the orange bar easier. They keep asking on the forums.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9322 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -398,6 +398,10 @@ module.YouthTwins.desc=Displays the amount of possible twins for your youth play
 
 # IN-GAME STRINGS. translate first
 
+#Loyalty display
+LoyaltyDisplay.motherClubBonus=(Mother club bonus)
+LoyaltyDisplay.loyaltyBonus=(Loyalty bonus)
+
 #Youth-Twins
 YouthTwins.possibleTwins=This player has %1 possible twin.;This player has %1 possible twins.
 YouthTwins.markedTwins=Marked as twin: %1
