Exerimental MatchReportFormat on Live pages: First commit
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9363 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -130,6 +130,7 @@
 			"content/links/links-youth.js",
 			"content/links/links-world.js",
 			"content/matches/att-vs-def.js",
+			"content/matches/live-match-report-format.js",
 			"content/matches/copy-ratings.js",
 			"content/matches/htms-prediction.js",
 			"content/matches/match-income.js",
