--- a/Info.plist
+++ b/Info.plist
@@ -161,6 +161,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/links/links-youth.js</string>
 				<string>content/links/links-world.js</string>
 				<string>content/matches/att-vs-def.js</string>
+				<string>content/matches/live-match-report-format.js</string>
 				<string>content/matches/copy-ratings.js</string>
 				<string>content/matches/htms-prediction.js</string>
 				<string>content/matches/match-income.js</string>
