git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9387 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -415,7 +415,7 @@ PlayerStatsExperience.NotAllMatchesVisible=The actual value might be higher beca
 PlayerStatsExperience.NoSkillUpFound=The actual value might be higher because no recorded experience-skillup was found.
 PlayerStatsExperience.ExperienceChange.title=Experience gain
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
-PlayerStatsExperience.Walkover=This game was a walkover. Thatfore the players didn't get any experience.
+PlayerStatsExperience.Walkover=This game was a walkover. Therefore the players didn't get any experience.
 
 #Series statistics
 rating.average=Average rating
