revert evil eval (better things to do for now)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9494 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -56,6 +56,10 @@
 			"content/pages/match.js",
 
 			//<!-- categorized modules -->
+			"content/alert/live-alert.js",
+			"content/alert/new-mail.js",
+			"content/alert/ticker-alert.js",
+			"content/alert/ticker-coloring.js",
 			"content/forum/add-leave-conf-button.js",
 			"content/forum/embed-media.js",
 			"content/forum/forum-change-posts.js",
@@ -125,6 +129,17 @@
 			"content/links/links-training.js",
 			"content/links/links-youth.js",
 			"content/links/links-world.js",
+			"content/matches/att-vs-def.js",
+			"content/matches/live-match-report-format.js",
+			"content/matches/copy-ratings.js",
+			"content/matches/htms-prediction.js",
+			"content/matches/match-income.js",
+			"content/matches/match-order.js",
+			"content/matches/match-player-colouring.js",
+			"content/matches/match-report-format.js",
+			"content/matches/match-simulator.js",
+			"content/matches/ratings.js",
+			"content/matches/stars-counter.js",
 			"content/presentation/background-fixed.js",
 			"content/presentation/bookmark-adjust.js",
 			"content/presentation/country-list.js",
