--- a/Info.plist
+++ b/Info.plist
@@ -41,6 +41,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/pages.js</string>
 				
 				<!-- utilities -->
+				<string>content/lib/dragdealer.js</string>
 				<string>content/lib/oauth.js</string>
 				<string>content/lib/sha1.js</string>
 				<string>content/lib/jquery.js</string>
