--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -396,6 +396,7 @@ module.RatingsDisplay.HatStats.desc=As HatStats
 module.RatingsDisplay.HTSums.desc=As Hattrick ratings sums
 module.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to look less suspicious. Make sure you also disable all other modules that might be risky, especially the "Alert" modules.
 module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
+module.PlayerStatsExperience.AlwaysShowAll.desc=Show as many matches as possible by default when using the links on the players page or the performance history page
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
 # -----------------------------------------------------------------------------
 
@@ -420,6 +421,26 @@ PlayerStatsExperience.NoSkillUpFound=The actual value might be higher because no
 PlayerStatsExperience.ExperienceChange.title=Experience gain
 PlayerStatsExperience.ExperienceChange.title.abbr=XP+
 PlayerStatsExperience.Walkover=This game was a walkover. Therefore the players didn't get any experience.
+
+
+PlayerStatsExperience.MatchesSinceSkilup=Matches since last skillup
+PlayerStatsExperience.matches=Matches
+PlayerStatsExperience.minutes=Minutes
+PlayerStatsExperience.minXPpts=Min. XP Pts.
+PlayerStatsExperience.maxXPpts=Max. XP Pts.
+PlayerStatsExperience.sum=Sum
+PlayerStatsExperience.Experience=Experience
+
+PlayerStatsExperience.matchFriendly=Friendlies
+PlayerStatsExperience.matchInternationalFriendly=International
+PlayerStatsExperience.matchNationalFriendly=National
+PlayerStatsExperience.matchCup=Cup
+PlayerStatsExperience.matchQualification=Qualification
+PlayerStatsExperience.matchLeague=League
+PlayerStatsExperience.matchNtFriendly=NT friendlies
+PlayerStatsExperience.matchMasters=Hattrick Masters
+PlayerStatsExperience.matchNtLeague=World Cup
+PlayerStatsExperience.matchNtFinals=World Cup (semi-) finals
 
 #Series statistics
 rating.average=Average rating
