--- a/manifest.json
+++ b/manifest.json
@@ -32,6 +32,7 @@
 			"content/util/time.js",
 			
 			//<!-- external libraries -->
+			"content/lib/dragdealer.js",
 			"content/lib/jquery.js",
 			"content/lib/oauth.js",
 			"content/lib/sha1.js",
