player-stats-experience.js: h2 headers added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9513 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -430,6 +430,7 @@ PlayerStatsExperience.minXPpts=Min. XP Pts.
 PlayerStatsExperience.maxXPpts=Max. XP Pts.
 PlayerStatsExperience.sum=Sum
 PlayerStatsExperience.Experience=Experience
+PlayerStatsExperience.PerformanceHistory=Performance history
 PlayerStatsExperience.InternationalPercentage=International friendlies in %:
 
 PlayerStatsExperience.matchFriendly=Friendlies
