match-order.js : Detailed settings for on-field highlighting and a seperated setting for the last game information in the onhover-overlay
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9558 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -376,9 +376,8 @@ module.ShowLineupSet.Winning.desc=Highlight winning teams
 module.SupporterStatsEnhancements.desc=Highlights current squad players in supporter stats
 module.MobileEnhancements.desc=Set of enhancements for mobile devices
 module.MatchOrderInterface.desc=Tweaks on the match order interface.
-module.MatchOrderInterface.PlayedLastMatch.desc=Highlights players which played in the last match and shows the last position and the time played in the details box
-module.MatchOrderInterface.PlayedLastMatch.alsoOnField.desc=Also highlight on the field
-module.MatchOrderInterface.PlayedLastMatch.disableForTournaments.desc=Disable for tournaments matches
+module.MatchOrderInterface.GotTrainingOnField.desc=Players that already have received training will also be marked on the playing field (for supporters only)
+module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Shows information about the last match in the details popup
 module.MatchOrderInterface.Specialties.desc=Show player specialties
 module.MatchOrderInterface.ShowFaces.desc=Show player faces instead of the shirt for future and old Lineups
 module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
