New section: Accessibility New module: ARIA landmarks, puts role attribute on all important elements
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9571 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -88,6 +88,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/ui.js</string>
 
 				<!-- categorized modules -->
+				<string>content/access/aria-landmarks.js</string>
 				<string>content/alert/live-alert.js</string>
 				<string>content/alert/new-mail.js</string>
 				<string>content/alert/ticker-alert.js</string>
