--- a/manifest.json
+++ b/manifest.json
@@ -57,6 +57,7 @@
 			"content/pages/match.js",
 
 			//<!-- categorized modules -->
+			"content/access/aria-landmarks.js",
 			"content/alert/live-alert.js",
 			"content/alert/new-mail.js",
 			"content/alert/ticker-alert.js",
