--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -397,6 +397,8 @@ module.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to
 module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
 module.PlayerStatsExperience.AlwaysShowAll.desc=Show as many matches as possible by default when using the links on the players page or the performance history page
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
+#accessability
+module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
 # -----------------------------------------------------------------------------
 
 
@@ -1166,6 +1168,7 @@ tab.alert=Alert
 tab.about=About
 tab.changes=Changes
 tab.help=Help
+tab.accessibility=Accessibility
 
 prefs.setup=Setup
 prefs.setup.desc=These are your settings that FoxTrick detected. If incorrect, {please report}.
