youth-twins.js : Yay its done! Info button has alt and tooltip.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9594 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -414,6 +414,7 @@ YouthTwins.markedTwins=Marked as twin: %1
 YouthTwins.nonTwins=Marked as non-twin: %1
 YouthTwins.undecidedTwins=Not yet marked: %1
 YouthTwins.nonHyUser=You could find out more about his potential by using hattrick youthclub.
+YouthTwins.infoText=What are twins and how can i benefit from them?
 
 #PlayerStatsExperience
 PlayerStatsExperience.ExperienceText=He already collected between %1 and %2 of 28 experience points. His experience is between %3 and %4.
