New small Module: TransferHistoryFilters as requested in #940
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9608 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -220,6 +220,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/shortcuts-and-tweaks/senior-team-shortcuts.js</string>
 				<string>content/shortcuts-and-tweaks/table-sort.js</string>
 				<string>content/shortcuts-and-tweaks/team-popup-links.js</string>
+				<string>content/shortcuts-and-tweaks/transfer-history-filters.js</string>
 				<string>content/shortcuts-and-tweaks/transfer-search-filters.js</string>
 				<string>content/shortcuts-and-tweaks/transfer-search-result-filters.js</string>
 				<!-- end categorized modules -->
