--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -399,10 +399,18 @@ module.PlayerStatsExperience.AlwaysShowAll.desc=Show as many matches as possible
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
 #accessability
 module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
+
+module.TransferHistoryFilters.desc=Adds filter options to the team transfer history page 
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#transfer-history-filters
+TransferHistoryFilters.all=All
+TransferHistoryFilters.sold=Sold
+TransferHistoryFilters.bought=Bought
+TransferHistoryFilters.filter=Filter:
 
 #Loyalty display
 LoyaltyDisplay.motherClubBonus=(Mother club bonus)
