--- a/manifest.json
+++ b/manifest.json
@@ -189,6 +189,7 @@
 			"content/shortcuts-and-tweaks/senior-team-shortcuts.js",
 			"content/shortcuts-and-tweaks/table-sort.js",
 			"content/shortcuts-and-tweaks/team-popup-links.js",
+			"content/shortcuts-and-tweaks/transfer-history-filters.js",
 			"content/shortcuts-and-tweaks/transfer-search-filters.js",
 			"content/shortcuts-and-tweaks/transfer-search-result-filters.js",
 			//<!-- end categorized modules -->
