--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -397,6 +397,7 @@ module.SafeForWork.desc=Replaces the icon and the title text of Hattrick tabs to
 module.PlayerStatsExperience.desc=Displays the experience subskill on the playerStats page
 module.PlayerStatsExperience.AlwaysShowAll.desc=Show as many matches as possible by default when using the links on the players page or the performance history page
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
+module.YouthTwins.HideInfoLink.desc=Disable information link for newcomers
 #accessability
 module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
 
