MatchOrderInterface : Option to clone an existing order. Players not filled in on purpose.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9680 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -378,6 +378,8 @@ module.MobileEnhancements.desc=Set of enhancements for mobile devices
 module.MatchOrderInterface.desc=Tweaks on the match order interface.
 module.MatchOrderInterface.GotTrainingOnField.desc=Players that already have received training will also be marked on the playing field (for supporters only)
 module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Shows information about the last match in the details popup
+module.MatchOrderInterface.CloneOrder.desc=Add a link to clone last order
+module.MatchOrderInterface.AutoExpandCloned.desc=Automatically expand cloned order
 module.MatchOrderInterface.Specialties.desc=Show player specialties
 module.MatchOrderInterface.ShowFaces.desc=Show player faces instead of the shirt for future and old Lineups
 module.MatchOrderInterface.StayOnPage.desc=Stay on the match order page after saving
@@ -669,6 +671,8 @@ matchOrder.home=Home
 matchOrder.home.abbr=H
 matchOrder.away=Away
 matchOrder.away.abbr=A
+matchOrder.cloneOrder=Clone this order
+matchOrder.cloneOrder.abbr=C
 
 #Skills
 Playmaking=Playmaking
