--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -378,7 +378,7 @@ module.MobileEnhancements.desc=Set of enhancements for mobile devices
 module.MatchOrderInterface.desc=Tweaks on the match order interface.
 module.MatchOrderInterface.GotTrainingOnField.desc=Players that already have received training will also be marked on the playing field (for supporters only)
 module.MatchOrderInterface.DisplayLastMatchInDetails.desc=Shows information about the last match in the details popup
-module.MatchOrderInterface.CloneOrder.desc=Add a link to clone last order
+module.MatchOrderInterface.CloneOrder.desc=Add a link to clone orders
 module.MatchOrderInterface.AutoExpandCloned.desc=Automatically expand cloned order
 module.MatchOrderInterface.Specialties.desc=Show player specialties
 module.MatchOrderInterface.ShowFaces.desc=Show player faces instead of the shirt for future and old Lineups
