MatchOrderInterface: Options to clone/convert orders. I think i also made the whole structure better somewhat.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9684 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -673,6 +673,12 @@ matchOrder.away=Away
 matchOrder.away.abbr=A
 matchOrder.cloneOrder=Clone this order
 matchOrder.cloneOrder.abbr=C
+matchOrder.cloneAsSub=Clone and convert to substitution
+matchOrder.cloneAsSub.abbr=S
+matchOrder.cloneAsSwap=Clone and convert to swap
+matchOrder.cloneAsSwap.abbr=Sw
+matchOrder.cloneAsChange=Clone and convert to change
+matchOrder.cloneAsChange.abbr=B
 
 #Skills
 Playmaking=Playmaking
