foxtrick.properties : Clone match orders -> lets call it behavioral changes, that's the name of the button in english
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9691 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -677,7 +677,7 @@ matchOrder.cloneAsSub=Clone and convert to substitution
 matchOrder.cloneAsSub.abbr=S
 matchOrder.cloneAsSwap=Clone and convert to swap
 matchOrder.cloneAsSwap.abbr=Sw
-matchOrder.cloneAsChange=Clone and convert to change
+matchOrder.cloneAsChange=Clone and convert to behavioral change
 matchOrder.cloneAsChange.abbr=B
 
 #Skills
