htev-prediction.js : Htev predictions first commit. Should trigger an overlay on the series pages.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9729 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -165,6 +165,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/matches/att-vs-def.js</string>
 				<string>content/matches/live-match-report-format.js</string>
 				<string>content/matches/copy-ratings.js</string>
+				<string>content/matches/htev-prediction.js</string>
 				<string>content/matches/htms-prediction.js</string>
 				<string>content/matches/match-income.js</string>
 				<string>content/matches/match-order.js</string>
