--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -404,10 +404,22 @@ module.YouthTwins.HideInfoLink.desc=Disable information link for newcomers
 module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
 
 module.TransferHistoryFilters.desc=Adds filter options to the team transfer history page 
+
+#htevprediction
+module.HTEVPrediction.desc=Displays match odds for league games upredicted by the useful tool at http://htev.org by furr_
 # -----------------------------------------------------------------------------
 
 
 # IN-GAME STRINGS. translate first
+
+#htev
+HTEVPrediction.home.short=H
+HTEVPrediction.away.short=A
+HTEVPrediction.tie.short=T
+HTEVPrediction.explainHome=Odd that the home team wins
+HTEVPrediction.explainTie=Odd that the game will end in a tie
+HTEVPrediction.explainAway=Odd that the away team wins
+HTEVPrediction.goToHTEV=Visit http://www.htev.org
 
 #transfer-history-filters
 TransferHistoryFilters.all=All
