friendly-pool colors added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9749 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -150,6 +150,7 @@
 			"content/presentation/custom-medals.js",
 			"content/presentation/fix-css-problems.js",
 			"content/presentation/friendly-interface.js",
+			"content/presentation/friendly-pool.js",
 			"content/presentation/header-fix.js",
 			"content/presentation/header-toggle.js",
 			"content/presentation/highlight-cup-wins.js",
