--- a/Info.plist
+++ b/Info.plist
@@ -181,6 +181,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/presentation/custom-medals.js</string>
 				<string>content/presentation/fix-css-problems.js</string>
 				<string>content/presentation/friendly-interface.js</string>
+				<string>content/presentation/friendly-pool.js</string>
 				<string>content/presentation/header-fix.js</string>
 				<string>content/presentation/header-toggle.js</string>
 				<string>content/presentation/highlight-cup-wins.js</string>
