friendly-pool: missing parts and some tweaking (guess work)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9750 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -400,6 +400,7 @@ module.PlayerStatsExperience.desc=Displays the experience subskill on the player
 module.PlayerStatsExperience.AlwaysShowAll.desc=Show as many matches as possible by default when using the links on the players page or the performance history page
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
 module.YouthTwins.HideInfoLink.desc=Disable information link for newcomers
+module.FriedlyPool.desc=Colorize visited countries in the friendly pool selection
 #accessability
 module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
 
@@ -939,6 +940,10 @@ copy.fixturesSource.copied=Fixtures source has been copied.
 
 #matches
 matches.income=Income:
+matches.playedHome=Played home
+matches.playedAway=Played away
+matches.playedHomeAway=Played home and away
+
 matches.attackdefensebars=Attack vs Defence
 matches.right=Right
 matches.left=Left
