htev-prediction : Other translations and disabled long term caching until it's been re-designed
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9756 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -420,7 +420,8 @@ HTEVPrediction.tie.short=T
 HTEVPrediction.explainHome=Odd that the home team wins
 HTEVPrediction.explainTie=Odd that the game will end in a tie
 HTEVPrediction.explainAway=Odd that the away team wins
-HTEVPrediction.goToHTEV=Visit http://www.htev.org
+HTEVPrediction.visitLeague=Visit the league on http://www.htev.org
+HTEVPrediction.visitDetailed=Get detailed information about this match on http://www.htev.org
 
 #transfer-history-filters
 TransferHistoryFilters.all=All
