added local-store.js for permanent storage outside prefs
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9760 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -20,6 +20,7 @@
 			"content/util/inject.js",
 			"content/util/layout.js",
 			"content/util/links-box.js",
+			"content/util/local-store.js",
 			"content/util/log.js",
 			"content/util/match-view.js",
 			"content/util/misc.js",
