--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1243,6 +1243,8 @@ prefs.additional.featureHighlight=Highlight FoxTrick's features
 prefs.additional.translationKeys=Show translation keys instead of translations
 prefs.additional.HTMLDebugLog=Show FoxTrick log on bottom of pages (for debugging)
 
+prefs.play=Play
+
 prefs.feedback.saved=Preferences saved!
 prefs.feedback.loaded=Preferences loaded!
 prefs.feedback.dismiss=(click to dismiss this notice)
