--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -331,7 +331,7 @@ module.CountryList.HideFlagOntop.desc=Removes the image link to the league on te
 module.MatchTables.desc=Removes white space on match tables
 module.MatchTables.RemoveTime.desc=Removes match time on current matches table
 module.YouthPromotes.desc=Shows days to promote a youth player
-module.HTMSPrediction.desc=Add result prediction on match report page
+module.HTMSPrediction.desc=Add result prediction on match report page provided by HTMS: http://www.fantamondi.it/HTMS/ (by taised)
 module.HighlightOwnerless.desc=Highlights ownerless teams on the series page.
 module.LastLogin.desc=Displays time since last login on user's page
 module.TransferCompareSort.desc=Clicking on the header sorts the Transfer Compare results by TSI, price or form
@@ -400,14 +400,14 @@ module.PlayerStatsExperience.desc=Displays the experience subskill on the player
 module.PlayerStatsExperience.AlwaysShowAll.desc=Show as many matches as possible by default when using the links on the players page or the performance history page
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
 module.YouthTwins.HideInfoLink.desc=Disable information link for newcomers
-module.FriedlyPool.desc=Colorize visited countries in the friendly pool selection
+module.FriendlyPool.desc=Colorize visited countries in the friendly pool selection
 #accessability
 module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
 
 module.TransferHistoryFilters.desc=Adds filter options to the team transfer history page 
 
 #htevprediction
-module.HTEVPrediction.desc=Displays match odds for league games upredicted by the useful tool at http://htev.org by furr_
+module.HTEVPrediction.desc=Displays match odds for league games provided by HTEV: http://htev.org (by furr_)
 # -----------------------------------------------------------------------------
 
 
