foxtrick.properties: button.play fix
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9805 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1130,6 +1130,8 @@ button.copy=Copy
 button.up=Up
 button.down=Down
 button.goto=Go to %s
+button.play=Play
+
 
 status.loading=Loading…
 status.loading.abbr=…
@@ -1242,8 +1244,6 @@ prefs.additional.anstoss2Icons=Use Anstoss2 icons for specialties
 prefs.additional.featureHighlight=Highlight FoxTrick's features
 prefs.additional.translationKeys=Show translation keys instead of translations
 prefs.additional.HTMLDebugLog=Show FoxTrick log on bottom of pages (for debugging)
-
-prefs.play=Play
 
 prefs.feedback.saved=Preferences saved!
 prefs.feedback.loaded=Preferences loaded!
