chrome cookies. + htev added
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9809 1e3807c3-0949-0410-b78e-337b627472c1

--- a/manifest.json
+++ b/manifest.json
@@ -229,6 +229,7 @@
 		"http://www.fantamondi.it/*"
 	],
 	"optional_permissions" : [
+		"cookies",
 		"http://*.hattrick-youthclub.org/*",
 		"http://stream.ht-radio.nl/*",
 		"http://no9-online.de/*",
