foxtrick.properties : HTEV .. Probability might be better then Odds
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9814 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -418,9 +418,9 @@ module.HTEVPrediction.desc=Displays match odds for league games provided by HTEV
 HTEVPrediction.home.short=H
 HTEVPrediction.away.short=A
 HTEVPrediction.tie.short=T
-HTEVPrediction.explainHome=Odd that the home team wins
-HTEVPrediction.explainTie=Odd that the game will end in a tie
-HTEVPrediction.explainAway=Odd that the away team wins
+HTEVPrediction.explainHome=Probability that the home team wins
+HTEVPrediction.explainTie=Probability that the game will end in a tie
+HTEVPrediction.explainAway=Probability that the away team wins
 HTEVPrediction.visitLeague=Visit the league on http://www.htev.org
 HTEVPrediction.visitDetailed=Get detailed information about this match on http://www.htev.org
 
