--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1275,7 +1275,6 @@ prefs.restoreDefault.ask=Are you sure you want to restore the default settings?
 prefs.deleteToken.ask=Delete OAuth token/secret for TeamID  %s?
 prefs.disableAllModules.ask=Are you sure you want to disable all modules?
 prefs.revokePermissions.ask=Are you sure you want to revoke all optional permissions?
-prefs.getPermissions.alert=%s needs permission to work. Allow access in the following dialog. If you decline this module feature will get disabled.
-prefs.needPermissions=There are options activated which need additional permissions to work. Save the preferences and allow or decline access in the following dialogs.
+prefs.needPermissions=There are options activated which need additional permissions to work. Save the preferences and allow or decline access in the following dialog. Those options are:
 
 ###EOF
