display translation status in betas
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9847 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1264,6 +1264,7 @@ link.recentChanges=Recent changes
 releaseNotes.show=Show release notes after every update
 releaseNotes.showFor=Show release notes for:
 releaseNotes.version=Version\:
+releaseNotes.translationStatus=Your language is %s% translated.
 
 about.copyright=Copyright
 about.maintainers=Maintainers
