--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -58,7 +58,7 @@ module.HTDateFormat.FirstDayOfWeekOffset.desc=Use custom offset to set your firs
 module.StaffMarker.desc=Marks officials' nicks on the forums and on team pages.
 module.StaffMarker.manager.desc=Mark officials' nicks on team pages.
 module.StaffMarker.own.desc=Custom markers in JSON format with user ID as key and style as value, e.g. {"1001" : "color: red;", "1002" : "background-color: yellow;"}
-module.StaffMarker.HT-Youthclub.desc=Mark HT-Youthclub staff
+module.StaffMarker.external.desc=Mark staff of other chpp apps
 #ForumYouthIcons
 module.ForumYouthIcons.desc=Displays a link bar for the youth academy (Also works for mail, Press announcements, Guestbook and Ads)
 module.ForumYouthIcons.q.desc=Adds icon for quote tags if missing
