pages/matches.js for youth and nt match detection. Htev no longer runs there
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9881 1e3807c3-0949-0410-b78e-337b627472c1

--- a/Info.plist
+++ b/Info.plist
@@ -79,6 +79,7 @@ a good reason to. They are for version bumps in Makefile.
 				<string>content/pages/youth-player.js</string>
 				<string>content/pages/transfer-search-results.js</string>
 				<string>content/pages/match.js</string>
+				<string>content/pages/matches.js</string>
 
 				<!-- core modules -->
 				<string>content/redirections.js</string>
