flags to tournament tables
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@9973 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -353,6 +353,7 @@ module.SeriesFlags.desc=Show series flags beside user links
 module.SeriesFlags.Guestbook.desc=Show in guest book
 module.SeriesFlags.Supporters.desc=Show in the supporters box of a team
 module.SeriesFlags.Visitors.desc=Show in recent visitors box
+module.SeriesFlags.Tournaments.desc=Show in the tournament tables
 module.SeriesFlags.CountryOnly.desc=Display the country flag without series name
 module.HTMSPoints.desc=Show the training points for a player calculated with HTMS skill table
 module.HTMSPoints.AddToPlayer.desc=Show on player page
