--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -160,6 +160,12 @@ module.PersonalityImages.desc=Add coloured numbers for popularity, character and
 module.HideSignatures.desc=Hide the signatures in forum posts, display a 'Signature' link instead
 module.MarkUnread.desc=Adds a link to mark all postings unread from the actual one
 module.ForumModeratorIconLinks.desc=Add icons to access moderator features on top of threads when available
+module.ForumModeratorIconLinks.threadclose.desc=Show "close thread" icon
+module.ForumModeratorIconLinks.threadclosereply.desc=Show "close & reply" icon
+module.ForumModeratorIconLinks.threaddelete.desc=Show "delete thread" icon
+module.ForumModeratorIconLinks.threadrename.desc=Show "rename thread" icon
+module.ForumModeratorIconLinks.changestickydate.desc=Show "change sticky settings" icon
+module.ForumModeratorIconLinks.threadmove.desc=Show "move thread" icon
 module.ForumNextAndPrevious.desc=Remove the 'Next' and 'Previous' buttons on forum threads if they are disabled
 module.ForumLastPost.desc=Jump to last posting instead of jumping to the first posting of read threads
 module.ForumLastPost.lastpage.desc=Jump to last page, not last posting
