#894 (MovePlayerStatement) added an option to remove it altogether
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10085 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -234,6 +234,7 @@ module.ForumPresentation.moved_avatarinfo_fix.desc=Fixes wrongly placed avatar i
 module.SkinPlugin.desc=Adds your own CSS skin to Hattrick
 module.CurrencyConverter.desc=Converting a HT currency
 module.MovePlayerStatement.desc=Moves player statements to the players image. If images are disabled, the statements will be removed.
+module.MovePlayerStatement.DeleteInstead.desc=Deletes the statement instead even if the images are enabled.
 module.TickerColoring.desc=The different events displayed in the news ticker will be coloured.
 #ExtraShortcuts
 module.ExtraShortcuts.desc=Adds shortcuts to the main shortcuts
@@ -404,7 +405,7 @@ module.PlayerStatsTrainingWeek.desc=Change the match grouping in the player stat
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
 module.YouthTwins.HideInfoLink.desc=Disable information link for newcomers
 module.FriendlyPool.desc=Colorize visited countries in the friendly pool selection
-module.FriendlyPool.ExpandCountrySelection.desc=Expand country selection
+module.FriendlyPool.ExpandCountrySelection.desc=Expand country
 #accessability
 module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
 
