--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -405,7 +405,7 @@ module.PlayerStatsTrainingWeek.desc=Change the match grouping in the player stat
 module.YouthTwins.desc=Displays the amount of possible twins for your youth players in conjunction with hattrick youthclub. You don't need to have a hattrick youthclub account to use this module. Since knowledge about the player faces is crucial for twin detection this feature is only useful for supporters.
 module.YouthTwins.HideInfoLink.desc=Disable information link for newcomers
 module.FriendlyPool.desc=Colorize visited countries in the friendly pool selection
-module.FriendlyPool.ExpandCountrySelection.desc=Expand country
+module.FriendlyPool.ExpandCountrySelection.desc=Expand country selection
 #accessability
 module.ARIALandmarks.desc=Add ARIA landmark roles to all sections of the website to make navigation easier when using screenreaders
 
