#953 (transfer-search-results-filter): added filters for form and excluding players without speciality
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10089 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1027,6 +1027,8 @@ TransferSearchResultFilters.hideBruised=Hide bruised
 TransferSearchResultFilters.hideInjured=Hide injured
 TransferSearchResultFilters.hideSuspended=Hide suspended
 TransferSearchResultFilters.days=Days:
+TransferSearchResultFilters.form=Form:
+TransferSearchResultFilters.hideOrdinary=Hide players without speciality
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 RapidId.view=View
