#867: a full rewrite of SkillColoring module. Most of options did not really work/interered with each other. Relying on CSS logic sucks.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10125 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -310,7 +310,7 @@ module.SkillColoring.only_skill_color.desc=Colourises skills only and not person
 module.SkillColoring.skill_number.desc=Show skills also as number e.g. solid (7)
 module.SkillColoring.skill_number_translated.desc=Show skills also translated to English and as number e.g. gut (solid 7)
 module.SkillColoring.skill_select.desc=Show also numbers at transfer search i.e. solid (7)
-module.SkillColoring.no_skill_links.desc=Hides the underlining and green font given by HTs
+module.SkillColoring.no_colors.desc=Removes all colors from skill and personality links
 module.BackgroundFixed.desc=Static background image.
 module.MatchIncome.desc=Match income in the match report
 #YouthSkillHideUnknown
