SkillColoring: added an option to display translation in the title instead. Add some more performance fixes and comments to clear things up a little.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10138 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -309,6 +309,7 @@ module.SkillColoring.skill_color.desc=Colourises skills
 module.SkillColoring.only_skill_color.desc=Colourises skills only and not personalities, fan mood etc.
 module.SkillColoring.skill_number.desc=Show skills also as number e.g. solid (7)
 module.SkillColoring.skill_number_translated.desc=Show skills also translated to English and as number e.g. gut (solid 7)
+module.SkillColoring.skill_translated_title.desc=Show translation only when hovered over with mouse
 module.SkillColoring.skill_select.desc=Show also numbers at transfer search i.e. solid (7)
 module.SkillColoring.no_colors.desc=Removes all colors from skill and personality links
 module.BackgroundFixed.desc=Static background image.
