--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -306,9 +306,9 @@ module.TeamPopupLinks.Coach.desc=Coach
 module.TeamPopupLinks.CustomLink.desc=Custom links in seperate lines. The tags [UserID] and [TeamID] will be replaced by the actual IDs. Example\: {"link"\:"http\://example.com/[teamid]", "title"\:"example link", "more"\: false, "newTab"\:true}
 module.SkillColoring.desc=Better visualisation of skills
 module.SkillColoring.skill_color.desc=Colourises skills
-module.SkillColoring.only_skill_color.desc=Colourises skills only and not personalities, fan mood etc.
+module.SkillColoring.non_skill_color.desc=Colourises personalities, fan mood etc.
 module.SkillColoring.skill_number.desc=Show skills also as number e.g. solid (7)
-module.SkillColoring.skill_number_translated.desc=Show skills also translated to English and as number e.g. gut (solid 7)
+module.SkillColoring.skill_translated.desc=Show skills translated to English e.g. gut (solid)
 module.SkillColoring.skill_translated_title.desc=Show translation only when hovered over with mouse
 module.SkillColoring.skill_select.desc=Show also numbers at transfer search i.e. solid (7)
 module.SkillColoring.no_colors.desc=Removes all colors from skill and personality links
