Dev Prefs, available on the bottom of the options page
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10157 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1198,6 +1198,7 @@ prefs.title=FoxTrick Preferences
 
 prefs.view.by.category=View by category
 prefs.view.by.page=View by last HT page
+prefs.view.by.filter=Filter
 
 module.screenshot=Screenshot
 module.link=You can copy and paste this link to the forum to direct here
