dev prefs: 99% searchable prefs, all modules, all h3 with data-text and the faq h3s ... slightly buggy with faq "links" vs. "Links Module" and when ctrl-x in the search field.
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@10165 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/foxtrick.properties
+++ b/content/foxtrick.properties
@@ -1198,7 +1198,6 @@ prefs.title=FoxTrick Preferences
 
 prefs.view.by.category=View by category
 prefs.view.by.page=View by last HT page
-prefs.view.by.filter=Filter
 
 module.screenshot=Screenshot
 module.link=You can copy and paste this link to the forum to direct here
@@ -1206,6 +1205,7 @@ module.link=You can copy and paste this link to the forum to direct here
 # tabs in preferences page
 #tabs
 tab.main=Main
+tab.all=All
 tab.on_page=Modules on this page
 tab.universal=Universal modules
 tab.informationAggregation=Information Aggregation
@@ -1269,6 +1269,8 @@ link.nightlyChrome=Development builds for Google Chrome
 link.nightlyOpera=Development builds for Opera
 link.nightlySafari=Development builds for Safari
 link.recentChanges=Recent changes
+
+changes.title=Changelog
 
 releaseNotes.show=Show release notes after every update
 releaseNotes.showFor=Show release notes for:
